Add HackerNews ingestion feature
- Add HN API collector using Firebase API for top stories
- Add ingest_hackernews module to fetch, extract, summarize and store HN stories
- Filter stories by score (default 100+) and time (default 24h)
- Store in Articles database with HN discussion link and score
- Add CLI command: nexus ingest-hackernews --min-score 100 --since 24
- Add basic smoke test for HN collector
- Update all documentation (README, PLAN, ops, config examples)
- Update .gitignore to allow test files in tests/ directory
- Successfully tested with 9 high-scoring stories (200+ points)

--- a/config/feeds.yaml.example
+++ b/config/feeds.yaml.example
@@ -18,3 +18,10 @@ rss_feeds:
   - https://ai.googleblog.com/feeds/posts/default
   - https://news.ycombinator.com/rss
 
+# Hacker News top stories
+# Ingests high-scoring HN stories using the official HN API
+# Run with: ./nexus ingest-hackernews --min-score 100 --since 24
+hackernews:
+  enabled: true
+  min_score: 100  # Minimum HN score threshold
+  since_hours: 24  # How many hours to look back
